--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
+    "facturapi": "^3.2.0",
     "http": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.1",
     "mongoose-unique-validator": "^3.0.0",
     "nodemon": "^2.0.15",
+    "q": "^1.5.1",
     "xml2js": "^0.4.23"
   }
 }
